After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707250 - idle-monitor: fix event propagation to devices
idle-monitor: fix event propagation to devices
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-02 00:46 UTC by Cosimo Cecchi
Modified: 2013-09-02 00:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
idle-monitor: fix event propagation to devices (1.00 KB, patch)
2013-09-02 00:46 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2013-09-02 00:46:01 UTC
See attached patch.
Without this patch, a session will typically have the mouse cursor always hidden, as the user active callback for the core device will never be called.
Comment 1 Cosimo Cecchi 2013-09-02 00:46:02 UTC
Created attachment 253791 [details] [review]
idle-monitor: fix event propagation to devices

device_id_max is set to the device_id in ensure_device_monitor(), but we
will loop only to (device_id_max - 1) when propagating the sync XEvent
down, missing the device correspondng to device_id_max.
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-09-02 00:50:09 UTC
Review of attachment 253791 [details] [review]:

Makes sense. Push to both wayland and master branches please.
Comment 3 Cosimo Cecchi 2013-09-02 00:52:01 UTC
Thanks, pushed

Attachment 253791 [details] pushed as e3b1c2d - idle-monitor: fix event propagation to devices